--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="navbar">
-      <p>Logo</p>
+      <a href="">Logo</a>
       <nav>
         <a href="">Home</a>
         <a href="">About</a>
