--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <header class="navbar">
-      <a href="">Logo</a>
+      <a href id="outfit">Out.fit</a>
+      <a href id="home">Home</a>
       <nav>
-        <a href="">Home</a>
-        <a href="">About</a>
+       <a href id="howto">How to</a>
       </nav>
     </header>
   </body>
